--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         
         <section class="hero">
 
-            <img class="desktop" src="images/Hero_Desktop.jpg">
-            <img class="mobile" src="images/Hero_Mobile.jpg">
-            <img class="tablet" src="images/Hero_Tablet.jpg">
+            <img class="desktop" src="images/Hero_Desktop.avif">
+            <img class="mobile" src="images/Hero_Mobile.avif">
+            <img class="tablet" src="images/Hero_Tablet.avif">
 
            
             <div class="hero-content">
@@ -84,7 +84,7 @@
 
                     <div class="product new">
                         <div class="product-picture">
-                            <img src="images/vr1.jpg" alt="product: Penom Case">
+                            <img src="images/vr1.avif" alt="product: Penom Case">
                         </div>
                         <div class="product-info">
                             <h5 class="categories">Headsets, Apple</h5>
@@ -98,7 +98,7 @@
 
                     <div class="product new">
                         <div class="product-picture">
-                            <img src="images/vr2.jpg" alt="product: Noise Cancelling Headphone">
+                            <img src="images/vr2.avif" alt="product: Noise Cancelling Headphone">
                         </div>
                         <div class="product-info">
                             <h5 class="categories">Headsets, PS</h5>
@@ -112,7 +112,7 @@
 
                     <div class="product">
                         <div class="product-picture">
-                            <img src="images/vr3.jpg" alt="product: Canon Digital SLR EOS Rebel T6">
+                            <img src="images/vr3.avif" alt="product: Canon Digital SLR EOS Rebel T6">
                         </div>
                         <div class="product-info">
                             <h5 class="categories">Headsets, Oculus</h5>
