hero image eager 적용

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         
         <section class="hero">
 
-            <img class="desktop" src="images/Hero_Desktop.avif">
-            <img class="mobile" src="images/Hero_Mobile.avif">
-            <img class="tablet" src="images/Hero_Tablet.avif">
+            <img class="desktop" loading="eager" src="images/Hero_Desktop.avif">
+            <img class="mobile" loading="eager"src="images/Hero_Mobile.avif">
+            <img class="tablet" loading="eager"src="images/Hero_Tablet.avif">
 
            
             <div class="hero-content">
