temp for roop delete

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                   <source srcset="images/vr1.avif" type="image/avif" />
                   <source srcset="images/vr1.webp" type="image/webp" />
                   <img
-                    src="images/vr1.jpg"
+                    src="images/vr1.webp"
                     alt="product: Penom Case"
                     width="300"
                     height="300"
@@ -166,7 +166,7 @@
                   <source srcset="images/vr2.avif" type="image/avif" />
                   <source srcset="images/vr2.webp" type="image/webp" />
                   <img
-                    src="images/vr2.jpg"
+                    src="images/vr2.webp"
                     alt="product: Noise Cancelling Headphone"
                     width="300"
                     height="300"
@@ -192,7 +192,7 @@
                   <source srcset="images/vr3.avif" type="image/avif" />
                   <source srcset="images/vr3.webp" type="image/webp" />
                   <img
-                    src="images/vr3.jpg"
+                    src="images/vr3.webp"
                     alt="product: Canon Digital SLR EOS Rebel T6"
                     width="300"
                     height="300"
