--- a/index.html
+++ b/index.html
@@ -87,32 +87,9 @@
     </header>
 
     <section class="hero">
-      <picture>
-        <source
-          srcset="images/Hero_Desktop.avif"
-          media="(min-width: 961px)"
-          type="image/avif"
-        />
-        <source
-          srcset="images/Hero_Tablet.avif"
-          media="(min-width: 577px)"
-          type="image/avif"
-        />
-        <source
-          srcset="images/Hero_Mobile.avif"
-          media="(max-width: 576px)"
-          type="image/avif"
-        />
-        <img
-          src="images/Hero_Desktop.webp"
-          alt="VR Headsets Banner"
-          width="1440"
-          height="600"
-          loading="eager"
-          fetchpriority="high"
-          style="width: 100%; height: auto; object-fit: cover"
-        />
-      </picture>
+      <img class="desktop" loading="eager" src="images/Hero_Desktop.webp" />
+      <img class="mobile" loading="eager" src="images/Hero_Mobile.webp" />
+      <img class="tablet" loading="eager" src="images/Hero_Tablet.webp" />
 
       <div class="hero-content">
         <div class="container">
@@ -129,91 +106,61 @@
     <section class="country-bar hidden"></section>
 
     <section class="best-sellers" id="best-sellers-section">
-        <h1>Best Sellers</h1>
-        <hr />
-        <div class="product-slider">
-          <div class="container">
-            <!-- Product 1 -->
-            <div class="product new">
-              <div class="product-picture">
-                <picture>
-                  <source srcset="images/vr1.avif" type="image/avif" />
-                  <source srcset="images/vr1.webp" type="image/webp" />
-                  <img
-                    src="images/vr1.webp"
-                    alt="product: Penom Case"
-                    width="300"
-                    height="300"
-                    loading="lazy"
-                    style="width: 100%; height: auto; object-fit: contain;"
-                  />
-                </picture>
-              </div>
-              <div class="product-info">
-                <h5 class="categories">Headsets, Apple</h5>
-                <h4 class="title">Apple Headset</h4>
-                <h3 class="price">
-                  <span>US$ 450.00</span>
-                </h3>
-                <button>Add to bag</button>
-              </div>
+      <h1>Best Sellers</h1>
+      <hr />
+      <div class="product-slider">
+        <div class="container">
+          <div class="product new">
+            <div class="product-picture">
+              <img src="images/vr1.webp" alt="product: Penom Case" />
             </div>
-    
-            <!-- Product 2 -->
-            <div class="product new">
-              <div class="product-picture">
-                <picture>
-                  <source srcset="images/vr2.avif" type="image/avif" />
-                  <source srcset="images/vr2.webp" type="image/webp" />
-                  <img
-                    src="images/vr2.webp"
-                    alt="product: Noise Cancelling Headphone"
-                    width="300"
-                    height="300"
-                    loading="lazy"
-                    style="width: 100%; height: auto; object-fit: contain;"
-                  />
-                </picture>
-              </div>
-              <div class="product-info">
-                <h5 class="categories">Headsets, PS</h5>
-                <h4 class="title">Playstation Headset</h4>
-                <h3 class="price">
-                  <span>US$ 399.99</span>
-                </h3>
-                <button>Add to bag</button>
-              </div>
+            <div class="product-info">
+              <h5 class="categories">Headsets, Apple</h5>
+              <h4 class="title">Apple Headset</h4>
+              <h3 class="price">
+                <span>US$ 450.00</span>
+              </h3>
+              <button>Add to bag</button>
             </div>
-    
-            <!-- Product 3 -->
-            <div class="product">
-              <div class="product-picture">
-                <picture>
-                  <source srcset="images/vr3.avif" type="image/avif" />
-                  <source srcset="images/vr3.webp" type="image/webp" />
-                  <img
-                    src="images/vr3.webp"
-                    alt="product: Canon Digital SLR EOS Rebel T6"
-                    width="300"
-                    height="300"
-                    loading="lazy"
-                    style="width: 100%; height: auto; object-fit: contain;"
-                  />
-                </picture>
-              </div>
-              <div class="product-info">
-                <h5 class="categories">Headsets, Oculus</h5>
-                <h4 class="title">Oculus Headset</h4>
-                <h3 class="price">
-                  <span class="discounted-price">US$ 349.99</span>
-                  <span class="original-price">US$ 419.99</span>
-                </h3>
-                <button>Add to bag</button>
-              </div>
+          </div>
+
+          <div class="product new">
+            <div class="product-picture">
+              <img
+                src="images/vr2.webp"
+                alt="product: Noise Cancelling Headphone"
+              />
+            </div>
+            <div class="product-info">
+              <h5 class="categories">Headsets, PS</h5>
+              <h4 class="title">Playstation Headset</h4>
+              <h3 class="price">
+                <span>US$ 399.99</span>
+              </h3>
+              <button>Add to bag</button>
+            </div>
+          </div>
+
+          <div class="product">
+            <div class="product-picture">
+              <img
+                src="images/vr3.webp"
+                alt="product: Canon Digital SLR EOS Rebel T6"
+              />
+            </div>
+            <div class="product-info">
+              <h5 class="categories">Headsets, Oculus</h5>
+              <h4 class="title">Oculus Headset</h4>
+              <h3 class="price">
+                <span class="discounted-price">US$ 349.99</span>
+                <span class="original-price">US$ 419.99</span>
+              </h3>
+              <button>Add to bag</button>
             </div>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
     <section class="best-sellers">
       <h1>All Products</h1>
