--- a/index.html
+++ b/index.html
@@ -45,11 +45,21 @@
         website_name: "Performance Course",
       });
     </script>
+    <!-- 2) Preload Hero 이미지 (LCP) -->
     <link
       rel="preload"
       as="image"
       href="images/Hero_Desktop.webp"
-      fetchpriority="high"
+      imagesrcset="
+            images/Hero_Mobile.webp  576w,
+            images/Hero_Tablet.webp  960w,
+            images/Hero_Desktop.webp 1920w
+            "
+      imagesizes="
+            (max-width: 576px) 100vw,
+            (max-width: 960px) 92vw,
+            100vw
+            "
     />
   </head>
 
@@ -87,13 +97,25 @@
     </header>
 
     <section class="hero">
-      <img class="desktop" loading="eager" src="images/Hero_Desktop.webp" />
-      <img class="mobile" loading="eager" src="images/Hero_Mobile.webp" />
-      <img class="tablet" loading="eager" src="images/Hero_Tablet.webp" />
-
+      <img
+        src="images/Hero_Desktop.webp"
+        width="1920"
+        height="1080"
+        srcset="
+          images/Hero_Mobile.webp   576w,
+          images/Hero_Tablet.webp   960w,
+          images/Hero_Desktop.webp 1920w
+        "
+        sizes="
+              (max-width: 576px) 100vw,
+              (max-width: 960px) 92vw,
+              100vw
+          "
+        alt="Hero Image"
+      />
       <div class="hero-content">
         <div class="container">
-          <h1>Discover our line of VR Headsets</h1>
+          <h2>Discover our line of VR Headsets</h2>
           <p>
             Sed ut perspiciatis unde omnis iste natus error sit voluptatem
             accusantium doloremque laudantium.
