--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home - Tech Shop</title>
+    <!-- 2) Preload Hero 이미지 (LCP) -->
+    <link
+      rel="preload"
+      as="image"
+      href="images/Hero_Desktop.webp"
+      imagesrcset="
+            images/Hero_Mobile.webp  576w,
+            images/Hero_Tablet.webp  960w,
+            images/Hero_Desktop.webp 1920w
+            "
+      imagesizes="
+            (max-width: 576px) 100vw,
+            (max-width: 960px) 92vw,
+            100vw
+            "
+    />
     <link
       href="https://fonts.googleapis.com/css?family=Heebo:300,400,600,700&display=swap"
       rel="stylesheet"
@@ -31,36 +47,26 @@
       type="text/javascript"
       src="//www.freeprivacypolicy.com/public/cookie-consent/4.1.0/cookie-consent.js"
       charset="UTF-8"
+      defer
     ></script>
     <script type="text/javascript" charset="UTF-8">
-      cookieconsent.run({
-        notice_banner_type: "simple",
-        consent_type: "express",
-        palette: "light",
-        language: "en",
-        page_load_consent_levels: ["strictly-necessary"],
-        notice_banner_reject_button_hide: false,
-        preferences_center_close_button_hide: false,
-        page_refresh_confirmation_buttons: false,
-        website_name: "Performance Course",
+      window.addEventListener("DOMContentLoaded", function () {
+        if (window.cookieconsent) {
+          cookieconsent.run({
+            notice_banner_type: "simple",
+            consent_type: "express",
+            palette: "light",
+            language: "en",
+            page_load_consent_levels: ["strictly-necessary"],
+            notice_banner_reject_button_hide: false,
+            preferences_center_close_button_hide: false,
+            page_refresh_confirmation_buttons: false,
+            website_name: "Performance Course",
+          });
+        }
       });
     </script>
-    <!-- 2) Preload Hero 이미지 (LCP) -->
-    <link
-      rel="preload"
-      as="image"
-      href="images/Hero_Desktop.webp"
-      imagesrcset="
-            images/Hero_Mobile.webp  576w,
-            images/Hero_Tablet.webp  960w,
-            images/Hero_Desktop.webp 1920w
-            "
-      imagesizes="
-            (max-width: 576px) 100vw,
-            (max-width: 960px) 92vw,
-            100vw
-            "
-    />
+    
   </head>
 
   <body>
