--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home - Tech Shop</title>
+    <meta name="description" content="Discover the latest VR headsets and tech gadgets at Tech Shop. Shop now for the best deals on top brands.">
+    <meta name="keywords" content="VR headsets, tech gadgets, online shopping, best deals, top brands">
+
     <!-- 2) Preload Hero 이미지 (LCP) -->
     <link
       rel="preload"
